fix non-existent VideoHandler, fix deprecated API